# sandbox_agent

./: .aider.conf.yml  .aiderignore  .cursorignore  .cursorrules  .cursorrules.sample  .dockerignore  .env.langraph.sample  .gitignore  .markdownlint.yaml  .opencommitignore  .pre-commit-config.yaml  .readthedocs.yaml  .relint.yml  .sourcery.yaml  .yamllint.yaml  COMPOSE_PLAN.md  CONTRIBUTING.md  DECISION_REGISTRY.md  Dockerfile  Justfile  PLAN.md  README.md  SCRAP.md  STRUCTURE.md  TODO.md  alembic.ini  codecov.yml  docker-compose.yml  env.sample  langgraph.json  mkdocs.yml  model_prices_and_context_window.json  personalization.json  pur.after.txt  pur.before.txt  pyproject.toml  release-please-config.json  requirements-colab.txt  sample.env  sweep.yaml  (+3 more)
.github/: dependabot.yml  labeler.yml  labeler_disabled.yml  labels.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug-report.md  code-maintenance.md  sweep-template.yml
.github/dependabot/: requirements-dev.txt  requirements.txt
.github/workflows/: _python-vulnerability-scan.yml  ci-upgrade.yml  ci.yml  docs.yml  labeler.yml  latest-changes.yml  release.yml  (+3 more)
aider_configs/: CONVENTIONS.md
notebooks/: agent_executor.ipynb  customer_support.py  minimal_customer_support.py  plan_and_execute.ipynb
scripts/: blame.py  generate_langsmith_dataset_climate_change.py  jekyll_run.sh  wait-for-it.sh  wait-until
tests/: conftest.py  test_aio_settings.py  test_async_typer.py  test_bot.py  test_bot_bad.py  test_chat_models.py  test_cli.py  test_factories.py  test_factories_serializer.py  test_logger.py  test_shell.py
(+2526 files in other folders)
