[project]
name = "sandbox-agent"
version = "0.1.0"
description = "Add your description here"
authors = [
    {name = "Malcolm Jones", email = "bossjones@theblacktonystark.com"},
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"
license = {text = "MIT"}

[project.scripts]
"sandbox-agent" = "sandbox_agent:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/sandbox_agent"]
